# FrameKit

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.COMMERCIAL  NOTICE  README.md  vcpkg.json
Examples/: CMakeLists.txt
Examples/FlightDeck/: CMakeLists.txt
Examples/FlightDeck/Addons/: CMakeLists.txt
Examples/FlightDeck/Addons/DemoAddon/: Addon_Demo.cpp  CMakeLists.txt
Examples/FlightDeck/src/: AddonManagerLayer.cpp  AddonManagerLayer.h  DemoLayer.cpp  FDAExt.h  FlightDeckApp.cpp  VideoLayer.cpp  VideoLayer.h
Examples/FlightDeck/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Examples/FlightDeck/src/utils/: FileDialog.h
Examples/SandBox/: CMakeLists.txt
Examples/SandBox/src/: DemoLayer.h  SandBoxApp.cpp  VideoLayer.cpp  VideoLayer.h
Examples/SandBox/src/ImGui/: ImGuiLayer.cpp
Examples/SandBox/src/utils/: FileDialog.cpp
Examples/SandBox/vendor_sandbox/Glad/: CMakeLists.txt
Examples/SandBox/vendor_sandbox/Glad/glad_gl4.6/glad/: glad.c  glad.h
Examples/SandBox/vendor_sandbox/glfw/: CMakeLists.txt
Examples/SandBox/vendor_sandbox/imgui/: CMakeLists.txt
SandBox/: CMakeLists.txt
SandBox/src/: DemoLayer.h  SandBoxApp.cpp  VideoLayer.cpp  VideoLayer.h
SandBox/src/ImGui/: ImGuiLayer.h
SandBox/vendor_sandbox/: CMakeLists.txt
SandBox/vendor_sandbox/Glad/: CMakeLists.txt
SandBox/vendor_sandbox/glfw/: CMakeLists.txt
SandBox/vendor_sandbox/imgui/: CMakeLists.txt
backends/imgui/Interface/: ImGuiAdapter.h
cmake/: FrameKitAddBackend.cmake  FrameKitConfig.cmake.in
include/: FKVersion.h  FrameKit.h
include/FrameKit/: FrameKit.h  Version.h  Window.h
include/FrameKit/Addon/: AddonBase.h  AddonHost.h  AddonLoader.h  AddonManager.h  AddonV1.h  FKABI.h  FKAddonV1.h  FKHostV1.h
include/FrameKit/Application/: AppSpec.h  Application.h  ApplicationBase.h
include/FrameKit/Base/: ApplicationBase.h  Assert.h  Base.h  Layer.h  LayerStack.h
include/FrameKit/Debug/: Instrumentor.h  Log.h
include/FrameKit/Engine/: Assert.h  Defines.h  Layer.h  PlatformDetection.h
include/FrameKit/Events/: ApplicationEvent.h  Event.h  GlobalEventHandler.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
include/FrameKit/Gfx/API/: GraphicsAPI.h  IRenderer.h  RendererConfig.h  RendererCreateInfo.h  RendererFactory.h
include/FrameKit/Input/: KeyCodes.h  MouseCodes.h
include/FrameKit/Interface/: GlobalContext.h  Input.h  KeyCodes.h  MouseCodes.h  Window.h
include/FrameKit/MediaKit/: MediaKit.h
include/FrameKit/Platform/: PlatformDetection.h
include/FrameKit/SharedMemory/: SharedMemory.h  ShmVersion.h
include/FrameKit/Utilities/: Memory.h  Time.h  UUID.h  Utilities.h
include/FrameKit/Utils/: Timer.h  Timestep.h  UUID.h
include/FrameKit/Window/: IWindow.h  Window.h  WindowBuiltins.h  WindowEventBridge.h  WindowPlugin.h  WindowRegistry.h
src/FrameKit/: CMakeLists.txt
src/FrameKit/Application/: Application.cpp  ApplicationBase.cpp
src/FrameKit/Base/: Application.cpp  ApplicationBase.cpp  EntryPoint.cpp  Layer.cpp  LayerStack.cpp  UUID.cpp
src/FrameKit/Core/: EntryPoint.cpp
src/FrameKit/Core/Addon/: AddonHost.h  AddonLoader.cpp  AddonLoader.h  AddonManager.cpp  AddonManager.h
src/FrameKit/Core/Application/: Application.cpp  ApplicationBase.cpp
src/FrameKit/Core/Debug/: Log.cpp
src/FrameKit/Core/Engine/: Engine.cpp  EntryPoint.cpp  Hosts.cpp  LayerStack.cpp  LayerStack.h
src/FrameKit/Core/Events/: GlobalEventHandler.cpp
src/FrameKit/Core/MediaKit/: ImageLoader_Stb.cpp  MediaKit.cpp  Player_FFmpeg.cpp  VideoReader_FFmpeg.cpp
src/FrameKit/Core/MediaKit/FFmpeg/: FFCommon.cpp  FFCommon.h  FFPlayer.cpp  FFPlayer.h  FFVideoReader.cpp  FFVideoReader.h
src/FrameKit/Core/SharedMemory/: SharedMemory.cpp
src/FrameKit/Core/Utilities/: Time.cpp  UUID.cpp
src/FrameKit/Debug/: Instrumentor.cpp  Log.cpp
src/FrameKit/Domains/: CMakeLists.txt
src/FrameKit/Domains/Window/: CMakeLists.txt
src/FrameKit/Domains/Window/Backends/: CMakeLists.txt
src/FrameKit/Domains/Window/Backends/Cocoa/: CocoaWindow.h  CocoaWindow.mm
src/FrameKit/Domains/Window/Backends/GLFW/: GlfwWindow.cpp  GlfwWindow.h
src/FrameKit/Domains/Window/Backends/Win32/: Win32Window.cpp  Win32Window.h
src/FrameKit/Domains/Window/RunTime/: WindowBackendRegistry.cpp  WindowBuiltins.cpp  WindowPluginLoader.cpp  WindowRegistry.cpp
src/FrameKit/Engine/: Engine.cpp  Engine.h  EntryPoint.cpp  Hosts.cpp  IAppHost.h  Layer.cpp  LayerStack.cpp  LayerStack.h
src/FrameKit/Events/: ApplicationEvent.cpp  Event.cpp  GlobalEventHandler.cpp  KeyEvent.cpp  MouseEvent.cpp
src/FrameKit/InterProcess/: IPCSend.hpp  InterprocessEvent.hpp  InterprocessEventManager.cpp  InterprocessEventManager.h  InterprocessRing.hpp
src/FrameKit/Interface/: Input.cpp  Window.cpp
src/FrameKit/Platform/GLFW/: GLFWInput.cpp
src/FrameKit/Platform/linux/: LinuxWindow.cpp  LinuxWindow.h
src/FrameKit/Platform/win/: WindowsWindow.cpp  WindowsWindow.h
src/FrameKit/SharedMemory/: SharedMemory.h  SharedMemoryExample.h  SharedMemoryVersion.h
src/FrameKit/Utils/: FileHandler.h  PlatformUtils.h  RollingBuffer.h
